Bug 423872 - System Settings -> Power Management: instruction to start Power Management service invalid
Summary: System Settings -> Power Management: instruction to start Power Management se...
Status: RESOLVED FIXED
Alias: None
Product: Powerdevil
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 5.19.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 404804 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-07-04 15:31 UTC by Lassi Väätämöinen
Modified: 2024-01-20 03:31 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Power management error message after Powerdevil killed (76.84 KB, image/png)
2020-07-04 15:31 UTC, Lassi Väätämöinen
Details
Services list #1/2 (126.97 KB, image/png)
2020-07-04 15:32 UTC, Lassi Väätämöinen
Details
Services list #2/2 (150.44 KB, image/png)
2020-07-04 15:33 UTC, Lassi Väätämöinen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lassi Väätämöinen 2020-07-04 15:31:18 UTC
SUMMARY
When Powerdevil is not running, navigating to System Settings->Power Management instructs user to enable service in "Startup and Shutdown".

STEPS TO REPRODUCE
1. Kill Powerdevil process in command line
2. Go to System Settings->Power Management; observe error message
3. Go to Startup and Shutdown->Background Services

OBSERVED RESULT
No Powerdevil / Power managament service listed, as instructed in the error message.

EXPECTED RESULT
Error message should not instruct to navigate to "Startup and Shutdown", since Powerdevil is started as XDG service?


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
KDE Plasma Version: 5.19.2 
KDE Frameworks Version: 5.71.0
Qt Version: 5.15.0
Comment 1 Lassi Väätämöinen 2020-07-04 15:31:54 UTC
Created attachment 129891 [details]
Power management error message after Powerdevil killed
Comment 2 Lassi Väätämöinen 2020-07-04 15:32:40 UTC
Created attachment 129892 [details]
Services list #1/2

Power management service not listed, as would be assumed based on the error message.
Comment 3 Lassi Väätämöinen 2020-07-04 15:33:09 UTC
Created attachment 129893 [details]
Services list #2/2

Power management service not listed, as assumed based on the error message.
Comment 4 Bug Janitor Service 2020-07-04 16:36:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/powerdevil/-/merge_requests/12
Comment 5 Nicolas Fella 2020-07-05 23:16:56 UTC
Git commit 06539f067b73da15a1fdbbcd823d63ffe0d543d1 by Nicolas Fella.
Committed on 04/07/2020 at 16:37.
Pushed by nicolasfella into branch 'master'.

[kcm] Remove incorrect information from error message

The message refers to the kded KCM, but powerdevil is not a kded module but a service started by xdg autostart

M  +1    -2    kcmodule/activities/activitypage.cpp
M  +1    -2    kcmodule/global/GeneralPage.cpp
M  +1    -2    kcmodule/profiles/EditPage.cpp

https://invent.kde.org/plasma/powerdevil/commit/06539f067b73da15a1fdbbcd823d63ffe0d543d1
Comment 6 Patrick Silva 2020-09-17 17:07:56 UTC
*** Bug 404804 has been marked as a duplicate of this bug. ***