[kcm] Remove incorrect information from error message

The message refers to the kded KCM, but powerdevil is not a kded module but a service started by xdg autostart

BUG: 423872