kcmodule/activities/activitypage.cpp
@@ -241,8 +241,7 @@ void ActivityPage::onServiceUnregistered(const QString& service)
         return;
     }
 
-    m_errorOverlay = new ErrorOverlay(this, i18n("The Power Management Service appears not to be running.\n"
-                                                 "This can be solved by starting or scheduling it inside \"Startup and Shutdown\""),
+    m_errorOverlay = new ErrorOverlay(this, i18n("The Power Management Service appears not to be running."),
                                       this);
 }
 
